Fixed issue with sass files being deleted
sass files were removed from local repository when last pushed. Made comments in all empty files to ensure they were not deleted.

--- a/css/layout/_base.scss
+++ b/css/layout/_base.scss
@@ -1,8 +1,8 @@
 html,body {
 	//font-family: $baseFont;
-	color: $darkGrey;
-	font-size: 100%;
-	background: $white;
+	//color: ;
+	//font-size: 100%;
+	//background: ;
 
 	@media #{$tabletOnly} {
 		//font-size: 97%;
